[package]
name = "tui-clap"
version = "0.2.0"
authors = ["Jonas Geschke <jonas.geschke@xitaso.com>"]
edition = "2018"
description = "Provides tui-rs widgets to output and text input which is parsed by clap"
license = "MIT"
documentation = "https://github.com/kegesch/tui-clap-rs"
homepage = "https://github.com/kegesch/tui-clap-rs"
repository = "https://github.com/kegesch/tui-clap-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
clap = { version = "3.0.0-beta.4", features = ["yaml"] }